# cloudsync

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: com.seravault.cloudsync-gdoc-handler.desktop  com.seravault.cloudsync-gdoc-mimetypes.xml  com.seravault.cloudsync.desktop  headless-config.sample.json  help.html  open-gdoc-link.sh
data/docs/: user-guide.md
data/systemd/: com.seravault.cloudsync-headless.service  com.seravault.cloudsync-headless.timer
flatpak/: com.seravault.cloudsync.json  com.seravault.cloudsync.metainfo.xml  python3-pip-deps.json
scripts/: build_flatpak.sh  build_help.py  screenshot_demo.py
src/cloudsync/: __init__.py  app.py  main.py  notifications.py  tray_helper.py
src/cloudsync/core/: activity_log.py  auth.py  autostart.py  client_secret.json  config.py  dropbox_auth.py  license.py  onedrive_auth.py  s3_auth.py  updater.py
src/cloudsync/sync/: base.py  dropbox.py  engine.py  gdrive.py  onedrive.py  s3.py  watcher.py
src/cloudsync/ui/: auth_dialog.py  cloud_folder_picker.py  edit_account_dialog.py  edit_folder_dialog.py  help_window.py  preferences.py  setup_wizard.py  tray.py  window.py
