[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsync"
version = "1.0.2"
description = "Two-way cloud storage sync with a native GNOME interface"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }
dependencies = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "watchdog>=3.0",
    "PyGObject>=3.44",
    "boto3>=1.26",
    "msal>=1.20",
    "requests>=2.28",
    "dropbox>=11.36",
]

[project.scripts]
cloudsync = "cloudsync.main:main"
cloudsync-headless = "cloudsync.main:headless_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cloudsync.core" = ["client_secret.json"]
